--- a/index.html
+++ b/index.html
@@ -10,5 +10,40 @@
     <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="London_image">
     <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="London_image">
     <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="London_image">
+    <hr>
+    <h2>Le mie Spese</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Numero</th>
+                <th>Descrizione</th>
+                <th>Costo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="2">Totale</td>
+                <td>360</td>
+            </tr>
+        </tfoot>
+    </table>
+    <hr>
 </body>
 </html> 
