--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>London Trip </title>
 </head>
 <body>
-    <h1>Il mIo Viaggio a Londra</h1>
+    <h1>Il mio Viaggio a Londra</h1>
     <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="London_image">
     <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="London_image">
     <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="London_image">
@@ -44,6 +44,14 @@
             </tr>
         </tfoot>
     </table>
+    <hr>
+    <h2>Cose da fare</h2>
+    <ul>
+        <li>Visitare la Tower of London &#10007 </li>
+        <li>Visitare greenwich &#10003</li>
+        <li>Ascoltare un artista di strarda a Covenant Garden &#10007</li>
+        <li>Mangiare il tipico Fish and Chips inglese &#10003</li>
+    </ul>
     <hr>
 </body>
 </html> 
