--- a/index.html
+++ b/index.html
@@ -53,5 +53,28 @@
         <li>Mangiare il tipico Fish and Chips inglese &#10003</li>
     </ul>
     <hr>
+    <h2>Info utili</h2>
+    <ol>
+        <li>Numeri di Emergenza
+            <ul>
+                <li><strong>999</strong>-Emergenza</li> 
+                <li><strong>101</strong>-Numero polizia</li> 
+                <li><strong>999</strong>-Numero assistenza medica</li> 
+            </ul>
+        </li>
+        <li>Hotel
+            <ul>
+                <li><strong>Nome hotel</strong>:Buckingham Palace</li> 
+                <li><strong>Indirizzo hotel</strong>:Westminster, London SW1AA, Regno Unito</li> 
+            </ul>
+        </li>
+        <li>Aereo
+            <ul>
+                <li><strong>Volo di andata</strong>:YI234X, ore 9:30 da Milano Malpensa</li> 
+                <li><strong>Volo di ritorno</strong>:YI234X, ore 18:30 da London Heathrow</li> 
+            </ul>
+        </li>
+    </ol>
+    <hr>
 </body>
 </html> 
