[UPDT] comments uploaded

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="London_image">
     <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="London_image">
     <hr>
+    <!-- LE MIE SPESE -->
     <h2>Le mie Spese</h2>
     <table>
         <thead>
@@ -45,14 +46,16 @@
         </tfoot>
     </table>
     <hr>
+    <!-- COSE DA FARE -->
     <h2>Cose da fare</h2>
     <ul>
-        <li>Visitare la Tower of London &#10007 </li>
-        <li>Visitare greenwich &#10003</li>
-        <li>Ascoltare un artista di strarda a Covenant Garden &#10007</li>
-        <li>Mangiare il tipico Fish and Chips inglese &#10003</li>
+        <li>Visitare la Tower of London &#10007;</li>
+        <li>Visitare greenwich &#10003;</li>
+        <li>Ascoltare un artista di strarda a Covenant Garden &#10007;</li>
+        <li>Mangiare il tipico Fish and Chips inglese &#10003;</li>
     </ul>
     <hr>
+    <!-- INFO UTILI -->
     <h2>Info utili</h2>
     <ol>
         <li>Numeri di Emergenza
@@ -76,6 +79,7 @@
         </li>
     </ol>
     <hr>
+    <!-- LE FOTO -->
     <h2>Le foto</h2>
     <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="London_image">
     <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="London_image">
